# deqs

./: .gitignore  Cargo.toml  README.md  build-protoset  clippy.toml  deny.toml  deqs.protoset  get-metrics  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
api/: Cargo.toml  README.md  build.rs
api/proto/: deqs.proto
api/src/: lib.rs  uri.rs
api/src/convert/: mod.rs  order.rs  order_book_error.rs  pair.rs  quote.rs  quote_book_error.rs  quote_id.rs
liquidity-bot/: Cargo.toml  README.md
liquidity-bot/api/: Cargo.toml  build.rs
liquidity-bot/api/proto/: liquidity_bot.proto
liquidity-bot/api/src/: lib.rs
liquidity-bot/src/: account_ledger_scanner.rs  admin_service.rs  config.rs  error.rs  lib.rs  metrics.rs
liquidity-bot/src/convert/: listed_tx_out.rs  matched_tx_out.rs  mod.rs  pending_tx_out.rs
liquidity-bot/src/mini_wallet/: account_ledger_scanner.rs  matched_tx_out.rs  mod.rs
liquidity-bot/tests/: e2e.rs
mc-test-utils/: Cargo.toml
mc-test-utils/src/: lib.rs
order-book/: Cargo.toml
order-book/src/: basic_types.rs  error.rs  in_memory_order_book.rs  order.rs  order_book.rs
order_book/: Cargo.toml
order_book/src/: basic_types.rs  error.rs  in_memory_order_book.rs  lib.rs  order.rs  order_book.rs
order_book/tests/: in_memory_order_book.rs  order.rs
order_book/tests/common/: mod.rs
p2p/: Cargo.toml
p2p/examples/: chat.rs
p2p/src/: behaviour.rs  client.rs  error.rs  lib.rs  network.rs  network_builder.rs  network_event.rs  network_event_loop.rs  rpc.rs  traits.rs
quote-book/: Cargo.toml
quote-book/api/: Cargo.toml
quote-book/api/src/: basic_types.rs  error.rs  lib.rs  quote.rs  quote_book.rs
quote-book/in-memory/: Cargo.toml
quote-book/in-memory/src/: lib.rs
quote-book/sqlite/: Cargo.toml  diesel.toml
quote-book/sqlite/migrations/2023-02-17-204631_quotes/: down.sql  up.sql
quote-book/sqlite/src/: error.rs  lib.rs  models.rs  schema.rs  sql_types.rs
quote-book/src/: basic_types.rs  error.rs  in_memory_quote_book.rs  lib.rs  msg.rs  quote.rs  quote_book.rs  synchronized_quote_book.rs
quote-book/synchronized/: Cargo.toml
quote-book/synchronized/src/: lib.rs
quote-book/test-suite/: Cargo.toml
quote-book/test-suite/src/: lib.rs
quote-book/tests/: in_memory_quote_book.rs  quote.rs  synchronized_quote_book.rs
quote-book/tests/common/: mod.rs
server/: Cargo.toml
server/src/: client_service.rs  config.rs  deqs_server.rs  error.rs  grpc_server.rs  lib.rs  metrics.rs  msg.rs  notifying_quote_book.rs  p2p.rs  server.rs  synchronized_quote_book.rs
server/src/p2p/: behaviour.rs  error.rs  metrics.rs  mod.rs  rpc.rs  rpc_error.rs
server/tests/: e2e.rs
test-cli/: Cargo.toml  README.md
test-server/: Cargo.toml
test-server/src/: client_service.rs  lib.rs
