[package]
name = "deqs-api"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
build = "build.rs"
edition = "2021"
links = "deqs-api"

[dependencies]
mc-api = { path = "../mobilecoin/api" }
mc-util-uri = { path = "../mobilecoin/util/uri" }

futures = "0.3"
grpcio = "0.11.0"
protobuf = "2.27.1"
rand = "0.8" # TODO something needs to enable the default features on rand, and since we don't have any dependency of mc-api doing that we need to do it here for now

[build-dependencies]
mc-util-build-grpc = { path = "../mobilecoin/util/build/grpc" }
mc-util-build-script = { path = "../mobilecoin/util/build/script" }

cargo-emit = "0.2.1"
