[package]
name = "deqs-order-book"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[dependencies]
displaydoc = "0.2"
hex = "0.4"

mc-blockchain-types = { path = "../mobilecoin/blockchain/types" }
mc-crypto-digestible = { path = "../mobilecoin/crypto/digestible" }
mc-crypto-ring-signature = { path = "../mobilecoin/crypto/ring-signature" }
mc-transaction-core = { path = "../mobilecoin/transaction/core" }
mc-transaction-extra = { path = "../mobilecoin/transaction/extra" }
mc-transaction-types = { path = "../mobilecoin/transaction/types" }

rand = "0.8" # build fails without this

[dev-dependencies]
assert_matches = "1.5"
rand_core = "0.6"

deqs-mc-test-utils = { path = "../mc-test-utils" }

mc-account-keys = { path = "../mobilecoin/account-keys" }
mc-crypto-ring-signature-signer = { path = "../mobilecoin/crypto/ring-signature/signer", default-features = false }
mc-fog-report-validation-test-utils = { path = "../mobilecoin/fog/report/validation/test-utils" }
mc-transaction-builder = { path = "../mobilecoin/transaction/builder", features = ["test-only"] }
