[package]
name = "deqs-order-book"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[dependencies]
displaydoc = "0.2"

mc-crypto-digestible = { path = "../mobilecoin/crypto/digestible" }
mc-crypto-ring-signature = { path = "../mobilecoin/crypto/ring-signature" }
mc-transaction-types = { path = "../mobilecoin/transaction/types" }
mc-transaction-extra = { path = "../mobilecoin/transaction/extra" }

rand = "0.8" # build fails without this

[dev-dependencies]
rand_core = "0.6"

mc-crypto-ring-signature-signer = { path = "../mobilecoin/crypto/ring-signature/signer", default-features = false }
mc-fog-report-validation-test-utils = { path = "../mobilecoin/fog/report/validation/test-utils" }
mc-account-keys = { path = "../mobilecoin/account-keys" }
mc-transaction-builder = { path = "../mobilecoin/transaction/builder", features = ["test-only"] }
mc-util-from-random = { path = "../mobilecoin/util/from-random" }
mc-util-test-helper = { path = "../mobilecoin/util/test-helper" }
