[package]
name = "deqs-p2p"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[dependencies]
mc-common = { path = "../mobilecoin/common" }
mc-util-serial = { path = "../mobilecoin/util/serial" }

async-trait = "0.1"
displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
libp2p = { version = "0.49.0", features = ["full"] }
libp2p-swarm = "0.40.1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "io-std"] }
void = "1"

rand = "0.8"