[package]
name = "deqs-server"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[lib]
name = "deqs_server"
path = "src/lib.rs"

[[bin]]
name = "deqs-server"
path = "src/bin/main.rs"

[dependencies]
deqs-api = { path = "../api" }

mc-common = { path = "../mobilecoin/common", features = ["loggers"] }
mc-util-grpc = { path = "../mobilecoin/util/grpc" }
mc-util-metrics  = { path = "../mobilecoin/util/metrics" }
mc-util-uri = { path = "../mobilecoin/util/uri" }

clap = { version = "4.0", features = ["derive", "env"] }
displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
grpcio = "0.11.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"
