[package]
name = "deqs-server"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[lib]
name = "deqs_server"
path = "src/lib.rs"

[[bin]]
name = "deqs-server"
path = "src/bin/main.rs"

[dependencies]
deqs-api = { path = "../api" }
deqs-p2p = { path = "../p2p" }
deqs-quote-book-api = { path = "../quote-book/api" }
deqs-quote-book-sqlite = { path = "../quote-book/sqlite" }
deqs-quote-book-synchronized = { path = "../quote-book/synchronized" }

mc-api = { path = "../mobilecoin/api" }
mc-common = { path = "../mobilecoin/common", features = ["loggers"] }
mc-ledger-db = { path = "../mobilecoin/ledger/db" }
mc-transaction-extra = { path = "../mobilecoin/transaction/extra" }
mc-util-grpc = { path = "../mobilecoin/util/grpc" }
mc-util-metrics  = { path = "../mobilecoin/util/metrics" }
mc-util-serial = { path = "../mobilecoin/util/serial" }
mc-util-uri = { path = "../mobilecoin/util/uri" }

clap = { version = "4.0", features = ["derive", "env"] }
displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
grpcio = "0.12.0"
lazy_static = "1.4"
postage = "0.5"
prometheus = "0.13"
rayon = "1.6"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time", "signal", "sync"] }

[dev-dependencies]
deqs-mc-test-utils = { path = "../mc-test-utils" }
deqs-quote-book-in-memory = { path = "../quote-book/in-memory" }

mc-account-keys = { path = "../mobilecoin/account-keys" }
mc-ledger-db = { path = "../mobilecoin/ledger/db", features = ["test_utils"] }
mc-transaction-types = { path = "../mobilecoin/transaction/types" }

rand = "0.8"
tokio-retry = "0.3"
