[package]
name = "deqs-test-cli"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[[bin]]
name = "deqs-test-cli"
path = "src/bin/main.rs"

[dependencies]
deqs-api = { path = "../api" }
deqs-mc-test-utils = { path = "../mc-test-utils" }
deqs-order-book = { path = "../order-book" }

mc-api = { path = "../mobilecoin/api" }
mc-common = { path = "../mobilecoin/common", features = ["loggers"] }
mc-transaction-types = { path = "../mobilecoin/transaction/types" }
mc-util-grpc = { path = "../mobilecoin/util/grpc" }
mc-util-parse = { path = "../mobilecoin/util/parse" }
mc-util-uri = { path = "../mobilecoin/util/uri" }

clap = { version = "4.0", features = ["derive", "env"] }
displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
grpcio = "0.11.0"
hex = "0.4"
rand = "0.8"
rayon = "1.6"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"
