[package]
name = "deqs-liquidity-bot-api"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
build = "build.rs"
edition = "2021"
links = "deqs-liquidity-bot-api"

[dependencies]
deqs-api = { path = "../../api" }

mc-api = { path = "../../mobilecoin/api" }

futures = "0.3"
grpcio = "0.12.0"
protobuf = "2.27.1"

[build-dependencies]
mc-util-build-grpc = { path = "../../mobilecoin/util/build/grpc" }
mc-util-build-script = { path = "../../mobilecoin/util/build/script" }

cargo-emit = "0.2.1"
