[package]
name = "deqs-quote-book-api"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[dependencies]
displaydoc = "0.2"
hex = "0.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

mc-blockchain-types = { path = "../../mobilecoin/blockchain/types" }
mc-crypto-digestible = { path = "../../mobilecoin/crypto/digestible" }
mc-crypto-ring-signature = { path = "../../mobilecoin/crypto/ring-signature" }
mc-ledger-db = { path = "../../mobilecoin/ledger/db", features = ["test_utils"] }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-transaction-extra = { path = "../../mobilecoin/transaction/extra" }
mc-transaction-types = { path = "../../mobilecoin/transaction/types" }

rand = "0.8" # build fails without this

[dev-dependencies]
rand_core = "0.6"

deqs-mc-test-utils = { path = "../../mc-test-utils" }
