[package]
name = "deqs-quote-book-api"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[dependencies]
displaydoc = "0.2"
hex = "0.4"

mc-blockchain-types = { path = "../../mobilecoin/blockchain/types" }
mc-crypto-digestible = { path = "../../mobilecoin/crypto/digestible" }
mc-crypto-ring-signature = { path = "../../mobilecoin/crypto/ring-signature" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-transaction-extra = { path = "../../mobilecoin/transaction/extra" }
mc-transaction-types = { path = "../../mobilecoin/transaction/types" }

rand = "0.8" # build fails without this
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]

deqs-mc-test-utils = { path = "../../mc-test-utils" }
rand_core = "0.6"
