[package]
name = "deqs-quote-book-in-memory"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[dependencies]
deqs-quote-book-api = { path = "../api" }

mc-blockchain-types = { path = "../../mobilecoin/blockchain/types" }
mc-crypto-ring-signature = { path = "../../mobilecoin/crypto/ring-signature" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-transaction-extra = { path = "../../mobilecoin/transaction/extra" }
mc-transaction-types = { path = "../../mobilecoin/transaction/types" }

rand = "0.8" # build fails without this

[dev-dependencies]
deqs-mc-test-utils = { path = "../../mc-test-utils" }
deqs-quote-book-test-suite = { path = "../test-suite" }
