[package]
name = "deqs-quote-book-test-suite"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[dependencies]
deqs-mc-test-utils = { path = "../../mc-test-utils" }
deqs-quote-book-api = { path = "../api" }

mc-account-keys = { path = "../../mobilecoin/account-keys" }
mc-blockchain-test-utils = { path = "../../mobilecoin/blockchain/test-utils" }
mc-crypto-ring-signature = { path = "../../mobilecoin/crypto/ring-signature" }
mc-crypto-ring-signature-signer = { path = "../../mobilecoin/crypto/ring-signature/signer", default-features = false }
mc-fog-report-validation-test-utils = { path = "../../mobilecoin/fog/report/validation/test-utils" }
 mc-transaction-builder = { path = "../../mobilecoin/transaction/builder", features = ["test-only"] }# displaydoc = "0.2"
mc-transaction-extra = { path = "../../mobilecoin/transaction/extra" }
mc-transaction-types = { path = "../../mobilecoin/transaction/types" }

rand = "0.8"
rand_core = "0.6"
